<resources>
    <string name="app_name">KCFAPP</string>
    <string name="title_activity_refugee">Refugee</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_need">need</string>
    <string name="food">food</string>
    <string name="clothing">clothing</string>
    <string name="shelter">shelter</string>
    <string name="health">health</string>
    <string name="please">Please select the aid you are needing.</string>
    <string name="submit">submit</string>
    <string name="back">back?</string>
    <string name="orgName">Organization Name</string>
    <string name="address">Address</string>
    <string name="service">Service</string>
</resources>
